Fixed spacing in app card

--- a/css/now.css
+++ b/css/now.css
@@ -205,6 +205,11 @@ header input, .card {
 .card.apps {
 	text-align: center;
 }
+.card.apps ul {
+	list-style: none;
+	margin: -10px 0 0;
+	padding: 0;
+}
 .card.apps .icon {
 	width: 64px;
 }
@@ -213,6 +218,7 @@ header input, .card {
 	width: 25%;
 	font-size: 12px;
 	cursor: pointer;
+	margin-top: 10px;
 }
 .card.apps .appname {
 	white-space: nowrap;
